subprojects/swen430/src/test/resources/tests/valid/StringAssign_Valid_8.while
void main() {
    {{string f} f} foo = {f: {f: "hello"}};
    foo.f.f[0] = 'z';
    print foo;
}

